PHOENIX-5459 Enable running the test suite with JDK11
remove unsupported VM option
update surefire and failsafe to 2.22.2

Closes #10

Signed-off-by: Josh Elser <elserj@apache.org>